@@ -1,14 +1,14 @@
 Package: hedgehog
 Type: Package
 Title: R functions for personal use
-Version: 0.1.14
-Date: 2018-12-29
+Version: 0.1.15
+Date: 2019-05-25
 Author: Erle Holgersen
 Maintainer: Erle Holgersen <erle.holgersen@gmail.com>
 Description: Various R functions developed for personal convenience.
 License: GPL-2
 LazyData: TRUE
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Imports: grid, survival
 Suggests: testthat,
     knitr,
