@@ -5,16 +5,19 @@
 \alias{date.stamp.file.name}
 \title{Generate date-stamped filename}
 \usage{
-datestamp.filename(file.name, extension = "", timestamp = FALSE)
+datestamp.filename(..., extension = "", timestamp = FALSE, sep = "_")
 
-date.stamp.file.name(file.name, extension = "", timestamp = FALSE)
+date.stamp.file.name(..., extension = "", timestamp = FALSE,
+  sep = "_")
 }
 \arguments{
-\item{file.name}{core part of file name to be date stamped}
+\item{...}{core part of file name to be date stamped. If more than one part, ill be combined with \code{sep}}
 
 \item{extension}{optional extension}
 
 \item{timestamp}{logical indicating whether to also add a timestamp}
+
+\item{sep}{separator between components of file name}
 }
 \value{
 generated file name
